--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,6 +2,7 @@
 @forward '_fonts';
 @forward '_typography';
 @forward 'media';
+@import "normalize.css";
 
 html {
   -webkit-box-sizing: border-box;
