--- a/src/components/Catalog/ui/style.module.scss
+++ b/src/components/Catalog/ui/style.module.scss
@@ -1,12 +1,34 @@
-.container {
-    max-width: 1440px;
-    margin: 0 auto;
-    background: #ffffff;
-    display: flex;
-    flex-wrap: nowrap;
-    align-items: center;
-    justify-content: space-between;
-    gap: 40px;
-    border-bottom: #101010 solid 1px;
+.cardWrapper {
+  display: flex;
+  flex-direction: column;
+  width: 320px;
+  height: 400px;
+  border: 1px solid #8a8a8a;
+  border-radius: 4px;
+  font-size: 16px;
+  text-align: center;
 }
 
+.img_desert {
+  height: 70%;
+  border-radius: 4px;
+}
+
+.button_desert {
+  border: 1px solid #8a8a8a;
+  border-radius: 4px;
+  max-width: 300px;
+  height: 40px;
+  margin: 10px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.button_desert:hover {
+  background-color: bisque;
+}
+
+.button_desert:active {
+  background-color: blanchedalmond;
+}
