--- a/src/components/FavoriteRecipes/ui/style.module.scss
+++ b/src/components/FavoriteRecipes/ui/style.module.scss
@@ -1,9 +1,6 @@
 .container_favorite {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 60px;
   max-width: 1440px;
-  justify-content: center;
+  text-align: center;
   margin-top:40px ;
 }
 
