--- a/src/components/Card/maps/ui/style.module.scss
+++ b/src/components/Card/maps/ui/style.module.scss
@@ -9,22 +9,25 @@
   border-radius: 4px;
   font-size: 16px;
   text-align: center;
+  position: relative;
 }
 
 .img_desert {
-  height: 70%;
+  height: 60%;
   border-radius: 4px;
 }
 
 .button_desert {
   border: 1px solid #8a8a8a;
   border-radius: 4px;
-  max-width: 300px;
   height: 40px;
+  width: 300px;
   margin: 10px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  bottom: 10px;
+  position: absolute;
 }
 
 .button_desert:hover {
