--- a/public/styles/_fonts.scss
+++ b/public/styles/_fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'RFDewi-Black';
-  src: url('../../public/RFDewi/Saira-Regular.woff') format('woff');
+  src: url('../RFDewi/Saira-Regular.woff') format('woff');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
