--- a/public/styles/globals.scss
+++ b/public/styles/globals.scss
@@ -1,8 +1,8 @@
-@forward '_colors';
-@forward '_fonts';
-@forward '_typography';
+@forward 'colors';
+@forward 'fonts';
+@forward 'typography';
 @forward 'media';
-@import "normalize.css";
+@import "../../node_modules/normalize.css/normalize.css";
 
 html {
   -webkit-box-sizing: border-box;
