--- a/src/components/Catalog/ui/style.module.scss
+++ b/src/components/Catalog/ui/style.module.scss
@@ -1,6 +1,15 @@
 .container_catalog {
-  max-width: 1440px;
   text-align: center;
+  max-width: 1440px;
+  margin-top:40px ;
+}
+
+.card_catalog {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 60px;
+  max-width: 1440px;
+  justify-content: center;
   margin-top:40px ;
 }
 
@@ -13,6 +22,7 @@
   border-radius: 4px;
   font-size: 16px;
   text-align: center;
+  position: relative;
 }
 
 .img_desert {
@@ -20,3 +30,15 @@
   border-radius: 4px;
 }
 
+.button_catalog {
+  border: 1px solid #8a8a8a;
+  border-radius: 4px;
+  height: 40px;
+  width: 300px;
+  margin: 10px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  bottom: 10px;
+  position: absolute;
+}
