--- a/src/components/Card/maps/ui/style.module.scss
+++ b/src/components/Card/maps/ui/style.module.scss
@@ -1,24 +1,33 @@
-@use '../../../../../public/styles/globals.scss';
+@use '../../../../styles/globals.scss';
+@use "../../../../../src/styles/colors.scss" as colors;
+@use '../../../../../src/styles/media.scss' as media;
+
+.container_card {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 60px;
+  justify-content: center;
+}
 
 .cardWrapper {
   display: flex;
   flex-direction: column;
   width: 320px;
   height: 400px;
-  border: 1px solid #8a8a8a;
+  border: 1px solid colors.$silvered;
   border-radius: 4px;
   font-size: 16px;
   text-align: center;
   position: relative;
 }
 
-.img_desert {
+.img_card {
   height: 60%;
   border-radius: 4px;
 }
 
-.button_desert {
-  border: 1px solid #8a8a8a;
+.button_card {
+  border: 1px solid colors.$silvered;
   border-radius: 4px;
   height: 40px;
   width: 300px;
@@ -30,10 +39,13 @@
   position: absolute;
 }
 
-.button_desert:hover {
+.button_card:hover {
   background-color: bisque;
 }
 
-.button_desert:active {
+.button_card:active {
   background-color: blanchedalmond;
 }
+
+
+
