--- a/src/components/FavoriteRecipes/ui/style.module.scss
+++ b/src/components/FavoriteRecipes/ui/style.module.scss
@@ -1,3 +1,5 @@
+@use "../../../../src/styles/_colors.scss" as colors;
+
 .container_favorite {
   text-align: center;
   max-width: 1440px;
@@ -18,7 +20,7 @@
   flex-direction: column;
   width: 320px;
   height: 400px;
-  border: 1px solid #8a8a8a;
+  border: 1px solid colors.$silvered;
   border-radius: 4px;
   font-size: 16px;
   text-align: center;
@@ -31,7 +33,7 @@
 }
 
 .button_favorite {
-  border: 1px solid #8a8a8a;
+  border: 1px solid colors.$silvered;
   border-radius: 4px;
   height: 40px;
   width: 300px;
