--- a/src/components/Header/ui/style.module.scss
+++ b/src/components/Header/ui/style.module.scss
@@ -1,13 +1,31 @@
+@use "../../../../src/styles/_colors.scss" as colors;
+@use '../../../../src/styles/media.scss' as media;
+
 .container {
     max-width: 1440px;
     margin: 0 auto;
-    background: #ffffff;
+    background: colors.$white;
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
     justify-content: space-between;
     gap: 40px;
-    border-bottom: #101010 solid 1px;
+    border-bottom: colors.$black solid 1px;
+
+    @include media.media-breakpoint-up('minsm') {
+        flex-direction: column;
+        gap: 20px;
+    }
+    @include media.media-breakpoint-up('md') {
+        flex-direction: column;
+        gap: 20px;
+    }
+    @include media.media-breakpoint-up('minxl') {
+        flex-direction: column;
+    }
+    @include media.media-breakpoint-up('mdxl') {
+        gap: 10px;
+    }
 }
 
 .icon {
@@ -20,6 +38,24 @@
     gap: 40px;
     align-items: center;
     padding: 40px;
+
+    @include media.media-breakpoint-up('minsm') {
+        flex-direction: column;
+        gap: 20px;
+        padding: 10px;
+    }
+    @include media.media-breakpoint-up('md') {
+        flex-direction: column;
+        padding: 10px;
+    }
+    @include media.media-breakpoint-up('minxl') {
+        gap:20px;
+        padding: 20px;
+    }
+    @include media.media-breakpoint-up('mdxl') {
+        gap: 10px;
+        padding: 20px;
+    }
 }
 
 .form_input {
@@ -30,14 +66,14 @@
 }
 
 .navbar {
-    color : #101010;
+    color : colors.$black;
     font-size: 18px;
 }
 
 .button_new_recipe {
     padding: 10px 20px;
-    background-color: #089e1e;
-    color: white;
+    background-color: colors.$green;
+    color: colors.$white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
