--- a/src/components/Modal/ui/style.module.scss
+++ b/src/components/Modal/ui/style.module.scss
@@ -1,10 +1,12 @@
+@use "../../../../src/styles/_colors.scss" as colors;
+
 .modal_container {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: colors.$black_op_50;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,10 +14,10 @@
 }
 
 .modal_content {
-  background-color: #ffffff;
+  background-color: colors.$white;
   border-radius: 8px;
   padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px colors.$black_op_50;
   width: 400px;
   max-width: 90%;
 }
@@ -34,7 +36,7 @@ textarea {
   width: 100%;
   padding: 10px;
   margin-top: 5px;
-  border: 1px solid #ccc;
+  border: 1px solid colors.$light-gray;
   border-radius: 4px;
 }
 
@@ -46,19 +48,19 @@ input[type="file"]{
   padding: 10px 15px;
   margin-right: 10px;
   border-radius: 4px;
-  border: 1px solid #089e1e;
-  background-color: #089e1e;
-  color: white;
+  border: 1px solid colors.$green;
+  background-color: colors.$green;
+  color: colors.$white;
   cursor: pointer;
   transition: background-color 0.3s;
 }
 
 .modal_button:hover {
-  background-color: white;
-  color: #089e1e;
+  background-color: colors.$white;
+  color: colors.$green;
 }
 
 .modal_button:active{
-  background-color: #089e1e;
-  color: white;
+  background-color: colors.$green;
+  color: colors.$white;
 }
