--- a/src/components/Search/ui/style.module.scss
+++ b/src/components/Search/ui/style.module.scss
@@ -1,15 +1,21 @@
+@use "../../../../src/styles/_colors.scss" as colors;
+@use '../../../../src/styles/media.scss' as media;
+
 .search_container {
     display: flex;
     align-items: center;
     gap: 10px;
+    margin: 0 0 40px;
+    justify-content: center;
 }
 
 .search_wrapper {
     padding: 8px 12px;
-    border: 1px solid #ccc;
+    border: 1px solid colors.$light-gray;
     border-radius: 4px;
     font-size: 16px;
     flex-grow: 1;
+    max-width: 300px;
 }
 
 .button_search {
@@ -25,9 +31,9 @@
 .button_search svg {
     width: 20px;
     height: 20px;
-    fill: #333;
+    fill: colors.$grey;
 }
 
 .button_search:hover svg {
-    fill: #089e1e;
+    fill: colors.$green;
 }
